--- a/laravel/public/css/main.css
+++ b/laravel/public/css/main.css
@@ -55,19 +55,11 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
+.menu{list-style-type: none; border-bottom:1px solid #333; padding: 5px 0; margin:0; font-size:0.8em}
+.menu li{display: inline; padding-right: 10px;}
+.menu li.title{border-left:3px solid #333; padding-left:3px;}
+.title-big{font-variant: small-caps; font-size:1.2em;}
+.title-sub{font-weight: bold; font-size:1.1em;}
 
 
 /* ==========================================================================
@@ -79,9 +71,9 @@ textarea {
 }
 
 @media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
+(-o-min-device-pixel-ratio: 5/4),
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 120dpi) {
 
 }
 
