First steps on member layout

--- a/laravel/_sources/member/_custom_fa_icons.scss
+++ b/laravel/_sources/member/_custom_fa_icons.scss
@@ -3,7 +3,7 @@
 
 //.#{$fa-css-prefix}-glass:before { content: $fa-var-glass; }
 //.#{$fa-css-prefix}-music:before { content: $fa-var-music; }
-//.#{$fa-css-prefix}-search:before { content: $fa-var-search; }
+.#{$fa-css-prefix}-search:before { content: $fa-var-search; }
 //.#{$fa-css-prefix}-envelope-o:before { content: $fa-var-envelope-o; }
 //.#{$fa-css-prefix}-heart:before { content: $fa-var-heart; }
 //.#{$fa-css-prefix}-star:before { content: $fa-var-star; }
@@ -24,7 +24,7 @@
 //.#{$fa-css-prefix}-gear:before,
 //.#{$fa-css-prefix}-cog:before { content: $fa-var-cog; }
 //.#{$fa-css-prefix}-trash-o:before { content: $fa-var-trash-o; }
-//.#{$fa-css-prefix}-home:before { content: $fa-var-home; }
+.#{$fa-css-prefix}-home:before { content: $fa-var-home; }
 //.#{$fa-css-prefix}-file-o:before { content: $fa-var-file-o; }
 //.#{$fa-css-prefix}-clock-o:before { content: $fa-var-clock-o; }
 //.#{$fa-css-prefix}-road:before { content: $fa-var-road; }
@@ -65,7 +65,7 @@
 //.#{$fa-css-prefix}-outdent:before { content: $fa-var-outdent; }
 //.#{$fa-css-prefix}-indent:before { content: $fa-var-indent; }
 //.#{$fa-css-prefix}-video-camera:before { content: $fa-var-video-camera; }
-//.#{$fa-css-prefix}-photo:before,
+.#{$fa-css-prefix}-photo:before,
 //.#{$fa-css-prefix}-image:before,
 //.#{$fa-css-prefix}-picture-o:before { content: $fa-var-picture-o; }
 //.#{$fa-css-prefix}-pencil:before { content: $fa-var-pencil; }
@@ -119,7 +119,7 @@
 //.#{$fa-css-prefix}-warning:before,
 //.#{$fa-css-prefix}-exclamation-triangle:before { content: $fa-var-exclamation-triangle; }
 //.#{$fa-css-prefix}-plane:before { content: $fa-var-plane; }
-//.#{$fa-css-prefix}-calendar:before { content: $fa-var-calendar; }
+.#{$fa-css-prefix}-calendar:before { content: $fa-var-calendar; }
 //.#{$fa-css-prefix}-random:before { content: $fa-var-random; }
 //.#{$fa-css-prefix}-comment:before { content: $fa-var-comment; }
 //.#{$fa-css-prefix}-magnet:before { content: $fa-var-magnet; }
@@ -184,7 +184,7 @@
 //.#{$fa-css-prefix}-briefcase:before { content: $fa-var-briefcase; }
 //.#{$fa-css-prefix}-arrows-alt:before { content: $fa-var-arrows-alt; }
 //.#{$fa-css-prefix}-group:before,
-//.#{$fa-css-prefix}-users:before { content: $fa-var-users; }
+.#{$fa-css-prefix}-users:before { content: $fa-var-users; }
 //.#{$fa-css-prefix}-chain:before,
 //.#{$fa-css-prefix}-link:before { content: $fa-var-link; }
 //.#{$fa-css-prefix}-cloud:before { content: $fa-var-cloud; }
