--- a/laravel/_sources/member/_custom_fa_icons.scss
+++ b/laravel/_sources/member/_custom_fa_icons.scss
@@ -60,7 +60,7 @@
 //.#{$fa-css-prefix}-align-center:before { content: $fa-var-align-center; }
 //.#{$fa-css-prefix}-align-right:before { content: $fa-var-align-right; }
 //.#{$fa-css-prefix}-align-justify:before { content: $fa-var-align-justify; }
-//.#{$fa-css-prefix}-list:before { content: $fa-var-list; }
+.#{$fa-css-prefix}-list:before { content: $fa-var-list; }
 //.#{$fa-css-prefix}-dedent:before,
 //.#{$fa-css-prefix}-outdent:before { content: $fa-var-outdent; }
 //.#{$fa-css-prefix}-indent:before { content: $fa-var-indent; }
@@ -68,7 +68,7 @@
 .#{$fa-css-prefix}-photo:before,
 //.#{$fa-css-prefix}-image:before,
 //.#{$fa-css-prefix}-picture-o:before { content: $fa-var-picture-o; }
-//.#{$fa-css-prefix}-pencil:before { content: $fa-var-pencil; }
+.#{$fa-css-prefix}-pencil:before { content: $fa-var-pencil; }
 //.#{$fa-css-prefix}-map-marker:before { content: $fa-var-map-marker; }
 //.#{$fa-css-prefix}-adjust:before { content: $fa-var-adjust; }
 //.#{$fa-css-prefix}-tint:before { content: $fa-var-tint; }
@@ -144,7 +144,7 @@
 //.#{$fa-css-prefix}-thumbs-o-down:before { content: $fa-var-thumbs-o-down; }
 //.#{$fa-css-prefix}-star-half:before { content: $fa-var-star-half; }
 //.#{$fa-css-prefix}-heart-o:before { content: $fa-var-heart-o; }
-//.#{$fa-css-prefix}-sign-out:before { content: $fa-var-sign-out; }
+.#{$fa-css-prefix}-sign-out:before { content: $fa-var-sign-out; }
 //.#{$fa-css-prefix}-linkedin-square:before { content: $fa-var-linkedin-square; }
 //.#{$fa-css-prefix}-thumb-tack:before { content: $fa-var-thumb-tack; }
 //.#{$fa-css-prefix}-external-link:before { content: $fa-var-external-link; }
@@ -509,7 +509,7 @@
 //.#{$fa-css-prefix}-circle-thin:before { content: $fa-var-circle-thin; }
 //.#{$fa-css-prefix}-header:before { content: $fa-var-header; }
 //.#{$fa-css-prefix}-paragraph:before { content: $fa-var-paragraph; }
-//.#{$fa-css-prefix}-sliders:before { content: $fa-var-sliders; }
+.#{$fa-css-prefix}-sliders:before { content: $fa-var-sliders; }
 //.#{$fa-css-prefix}-share-alt:before { content: $fa-var-share-alt; }
 //.#{$fa-css-prefix}-share-alt-square:before { content: $fa-var-share-alt-square; }
 //.#{$fa-css-prefix}-bomb:before { content: $fa-var-bomb; }
