Updated table styles and some other ones

--- a/laravel/_sources/member/_custom_fa_icons.scss
+++ b/laravel/_sources/member/_custom_fa_icons.scss
@@ -114,7 +114,7 @@
 //.#{$fa-css-prefix}-gift:before { content: $fa-var-gift; }
 //.#{$fa-css-prefix}-leaf:before { content: $fa-var-leaf; }
 //.#{$fa-css-prefix}-fire:before { content: $fa-var-fire; }
-//.#{$fa-css-prefix}-eye:before { content: $fa-var-eye; }
+.#{$fa-css-prefix}-eye:before { content: $fa-var-eye; }
 //.#{$fa-css-prefix}-eye-slash:before { content: $fa-var-eye-slash; }
 //.#{$fa-css-prefix}-warning:before,
 .#{$fa-css-prefix}-exclamation-triangle:before { content: $fa-var-exclamation-triangle; }
@@ -534,7 +534,7 @@
 //.#{$fa-css-prefix}-cc-stripe:before { content: $fa-var-cc-stripe; }
 //.#{$fa-css-prefix}-bell-slash:before { content: $fa-var-bell-slash; }
 //.#{$fa-css-prefix}-bell-slash-o:before { content: $fa-var-bell-slash-o; }
-//.#{$fa-css-prefix}-trash:before { content: $fa-var-trash; }
+.#{$fa-css-prefix}-trash:before { content: $fa-var-trash; }
 //.#{$fa-css-prefix}-copyright:before { content: $fa-var-copyright; }
 //.#{$fa-css-prefix}-at:before { content: $fa-var-at; }
 //.#{$fa-css-prefix}-eyedropper:before { content: $fa-var-eyedropper; }
