--- a/laravel/_sources/member/_custom_fa_icons.scss
+++ b/laravel/_sources/member/_custom_fa_icons.scss
@@ -133,8 +133,8 @@
 //.#{$fa-css-prefix}-arrows-h:before { content: $fa-var-arrows-h; }
 //.#{$fa-css-prefix}-bar-chart-o:before,
 //.#{$fa-css-prefix}-bar-chart:before { content: $fa-var-bar-chart; }
-//.#{$fa-css-prefix}-twitter-square:before { content: $fa-var-twitter-square; }
-//.#{$fa-css-prefix}-facebook-square:before { content: $fa-var-facebook-square; }
+.#{$fa-css-prefix}-twitter-square:before { content: $fa-var-twitter-square; }
+.#{$fa-css-prefix}-facebook-square:before { content: $fa-var-facebook-square; }
 //.#{$fa-css-prefix}-camera-retro:before { content: $fa-var-camera-retro; }
 //.#{$fa-css-prefix}-key:before { content: $fa-var-key; }
 //.#{$fa-css-prefix}-gears:before,
@@ -209,7 +209,7 @@
 //.#{$fa-css-prefix}-truck:before { content: $fa-var-truck; }
 //.#{$fa-css-prefix}-pinterest:before { content: $fa-var-pinterest; }
 //.#{$fa-css-prefix}-pinterest-square:before { content: $fa-var-pinterest-square; }
-//.#{$fa-css-prefix}-google-plus-square:before { content: $fa-var-google-plus-square; }
+.#{$fa-css-prefix}-google-plus-square:before { content: $fa-var-google-plus-square; }
 //.#{$fa-css-prefix}-google-plus:before { content: $fa-var-google-plus; }
 //.#{$fa-css-prefix}-money:before { content: $fa-var-money; }
 //.#{$fa-css-prefix}-caret-down:before { content: $fa-var-caret-down; }
