--- a/laravel/_sources/member/sass/_form.scss
+++ b/laravel/_sources/member/sass/_form.scss
@@ -16,6 +16,10 @@ input[type=checkbox], input[type=radio] {
   bottom: 1px;
 }
 
+input[type=file]{
+	padding:1px 5px;
+}
+
 input[type=radio] {
   bottom: 2px;
 }
