--- a/laravel/_sources/member/sass/_form.scss
+++ b/laravel/_sources/member/sass/_form.scss
@@ -17,7 +17,7 @@ input[type=checkbox], input[type=radio] {
 }
 
 input[type=file]{
-	padding:1px 5px;
+	padding:3px 5px 4px 5px;
 }
 
 input[type=radio] {
