--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -5,7 +5,13 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 body {
-  margin: 0;
+margin: 0;
+    line-height: 1;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    font-family: Verdana, Arial, sans-serif;
+    background-color: black;
 }
 article,
 aside,
@@ -228,7 +234,7 @@ textarea {
    ========================================================================== */
 .menu {
   list-style-type: none;
-  border-bottom: 1px solid #333;
+ 
   padding: 5px 0;
   margin: 0;
   font-size: 0.8em;
@@ -237,17 +243,16 @@ textarea {
   display: inline;
   padding-right: 10px;
 }
-.menu li.title {
-  border-left: 3px solid #333;
-  padding-left: 3px;
-}
-.title-big {
-  font-variant: small-caps;
-  font-size: 1.2em;
-}
-.title-sub {
-  font-weight: bold;
-  font-size: 1.1em;
+
+.menu a:link, .menu a:hover, .menu a:focus, .menu a:visited { 
+ 	text-decoration:none;
+ 	color: white;
+ 	font-size: 1em;
+} 
+ 
+.menu a:active, .menu a:hover
+{
+	color: red;
 }
 /* ==========================================================================
    Media Queries
@@ -345,3 +350,235 @@ textarea {
   }
 }
 /*# sourceMappingURL=style.css.map */
+
+/* ============================================================================
+                                  css
+=============================================================================*/
+
+h2 {
+	font-size: 1.2em;
+		color: red;
+}
+
+/*-----------*/
+/*           */
+/*-----------*/
+
+.menu {
+    padding-bottom: 3px;
+    font-size: 1.5em;
+        color: white;
+}    
+    
+#enteteBarre {
+    height: 70px;
+  
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+#logo, #nav, #reseauxSociaux {
+	display: inline-flex;
+    }
+
+#logo {
+	padding-left: 60px;
+	width: 380px;
+}
+
+#nav {
+	width: 65%;
+}
+
+nav a:link, nav a:hover, nav a:focus, nav a:visited { 
+ 	text-decoration:none;
+ 	color: whiteihte;
+ 	font-size: 1.2em;
+} 
+ 
+nav a:active, nav a:hover
+{
+	color: red;
+}
+
+#reseauxSociaux img{
+    width: 50px;
+    padding-right: 5px;
+}
+
+#reseauxSociaux {
+ 	margin-top: 6px;
+	text-align: right;
+}
+
+div.bordure {
+	vertical-align: top;	
+	border: 2px solid red;
+}
+
+#utilisation, #mediaskates, #information {
+	display: inline-block;
+	vertical-align: top;
+	font-size: 13px;
+	padding-bottom: 20px;
+}
+
+#utilisation {
+	padding-left: 115px;
+	width: 400px;
+}
+
+#mediaskates {
+	width: 250px;
+}
+
+#information {
+	width: 250px;
+}
+
+#slide {
+	display: block;
+}
+
+#baniereFooter {
+	display: flex;
+}
+
+
+#liens {
+	margin-top: 15px;
+	display: inline-flex;
+	justify-content: space-around;
+	width: 100%;
+}
+
+footer a:link, footer a:hover, footer a:focus, footer a:visited { 
+ 	text-decoration:none;
+ 	color: gray;
+ 	font-size: 0.8em;
+} 
+ 
+footer a:active, footer a:hover
+{
+	color: white;
+}
+
+
+/*-----------*/
+/*   Cache   */
+/*-----------*/
+#mask {
+	position: absolute;
+	z-index: 2;
+}
+
+#bandoRec {
+	position: absolute;
+	z-index: 2;
+	width:400px;
+	height:705px;
+	background: rgba(0,0,0,0.6);
+}
+
+#bandoTri{
+	position: absolute;
+	z-index: 2;
+	margin-left:  400px;
+	border-style: solid;
+	border-width: 705px 200px 0 0;
+	border-color: rgba(0,0,0,0.6) transparent transparent transparent;
+}
+
+/*-----------*/
+/* SlideShow */
+/*-----------*/
+#diapo {
+  max-width: 100%;
+  height: 700px;
+  margin: 5px;
+}
+
+.slide1,.slide2,.slide3,.slide4,.slide5 {
+  position: absolute;
+  width: 100%;
+  height: 700px;
+}
+
+.slide1 {
+  background: url("../img/test.jpg")no-repeat center;
+  background-size: cover;
+  animation:fade 15s infinite;
+  -webkit-animation:fade 15s infinite;
+}
+.slide2 {
+  background: url("../img/test2.jpg")no-repeat center;
+  background-size: cover;
+  animation:fade 15s infinite;
+  -webkit-animation:fade2 15s infinite;
+}
+.slide3 {
+  background: url("../img/test3.jpg")no-repeat center;
+  background-size: cover;
+  animation:fade 15s infinite;
+  -webkit-animation:fade3 15s infinite;
+}
+.slide4 {
+  background: url("../img/test4.jpg")no-repeat center;
+  background-size: cover;
+  animation:fade 15s infinite;
+  -webkit-animation:fade4 15s infinite;
+}
+.slide5 {
+  background: url("../img/test5.jpg")no-repeat center;
+  background-size: cover;
+  animation:fade 15s infinite;
+  -webkit-animation:fade5 15s infinite;
+}
+
+@keyframes fade
+{
+  0%   {opacity:1}
+  20% { opacity: 0}
+  40% { opacity: 0}
+  60% { opacity: 0}
+  80% { opacity: 0}
+  100% { opacity: 1}
+   
+}
+@keyframes fade2
+{
+  0%   {opacity:0}
+  20% { opacity: 1}
+  40% { opacity: 0}
+  60% { opacity: 0}
+  80% { opacity: 0}
+  100% { opacity: 0}
+}
+@keyframes fade3
+{
+  0%   {opacity:0}
+  20% { opacity: 0}
+  40% { opacity: 1}
+  60% { opacity: 0}
+  80% { opacity: 0}
+  100% { opacity: 0}
+}
+@keyframes fade4
+{
+  0%   {opacity:0}
+  20% { opacity: 0}
+  40% { opacity: 0}
+  60% { opacity: 1}
+  80% { opacity: 0}
+  100% { opacity: 0}
+}
+@keyframes fade5
+{
+  0%   {opacity:0}
+  20%  {opacity: 0}
+  40%  { opacity: 0}
+  60%  { opacity: 0}
+  80%  { opacity: 1}
+  100% { opacity: 0}
+}
