--- a/laravel/_sources/admin/admin.scss
+++ b/laravel/_sources/admin/admin.scss
@@ -6,3 +6,6 @@
 @import "../member/sass/buttons";
 @import "../member/sass/alerts";
 @import "../member/sass/tables";
+
+@import "../member/vendors/jquery.fancybox-thumbs";
+@import "../member/vendors/jquery.fancybox";
