--- a/laravel/_sources/member/member.scss
+++ b/laravel/_sources/member/member.scss
@@ -6,3 +6,6 @@
 @import "sass/buttons";
 @import "sass/alerts";
 @import "sass/tables";
+
+@import "vendors/jquery.fancybox-thumbs";
+@import "vendors/jquery.fancybox";
