Added a zone with checked bg to display images with transparence

--- a/laravel/_sources/member/custom/_variables.scss
+++ b/laravel/_sources/member/custom/_variables.scss
@@ -33,3 +33,6 @@ $border-radius-lg:10px;
 $base-color:$text-color;
 $base-color-link:$link-color;
 $base-color-link-hover:$link-hover-color;
+
+// Images
+$transparent-bg: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAIAAACQkWg2AAAABmJLR0QA/wD/AP+gvaeTAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAB3RJTUUH4AoVFBkpNXo09gAAACdJREFUKM9jTEtLY8AGjI2NsYozMZAIRjUQA1hwhffZs2dHQ4l+GgD7wQTt6d5FVQAAAABJRU5ErkJggg==');
