--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -1,415 +1,218 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-html {
-    font-family: sans-serif;
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+#nav {
+    z-index: 1;
+    width: 65%;
+    margin-top: 45px;
 }
-body {
-    margin: 0;
-    line-height: 1;
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    font-family: Verdana, Arial, sans-serif;
-    background-color: black;
+#nav2 {
+    z-index: 1;
+    width:100%;
+    margin-top: 45px;
 }
-
-a {
-    background-color: transparent;
-}
-a:active,
-a:hover {
-    outline: 0;
-}
-
-h1 {
-    padding-left: 30px;
-    font-size: 2em;
-    margin: 0.67em 0;
-    color: #e0e0e0; 
-}
-
-img {
-    border: 0;
-}
-svg:not(:root) {
-    overflow: hidden;
-}
-figure {
-    margin: 1em 40px;
-}
-hr {
-    -moz-box-sizing: content-box;
-    box-sizing: content-box;
-    height: 0;
-}
-pre {
-    overflow: auto;
-}
-code,
-kbd,
-pre,
-samp {
-    font-family: monospace,monospace;
-    font-size: 1em;
-}
-button,
-input,
-optgroup,
-select,
-textarea {
-    color: inherit;
-    font: inherit;
-    margin: 0;
-}
-button {
-    overflow: visible;
-}
-button,
-select {
-    text-transform: none;
-}
-button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
-    -webkit-appearance: button;
-    cursor: pointer;
-}
-button[disabled],
-html input[disabled] {
-    cursor: default;
-}
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-    border: 0;
-    padding: 0;
-}
-input {
-    line-height: normal;
-}
-input[type=checkbox],
-input[type=radio] {
-    box-sizing: border-box;
-    padding: 0;
-}
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
-    height: auto;
-}
-input[type=search] {
-    -webkit-appearance: textfield;
-    -moz-box-sizing: content-box;
-    -webkit-box-sizing: content-box;
-    box-sizing: content-box;
-}
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
-    -webkit-appearance: none;
-}
-fieldset {
-    border: 1px solid silver;
-    margin: 0 2px;
-    padding: 0.35em 0.625em 0.75em;
-}
-legend {
-    border: 0;
-    padding: 0;
-}
-textarea {
-    overflow: auto;
-}
-optgroup {
-    font-weight: 700;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
-td,
-th {
-    padding: 0;
-}
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
-html {
-    color: #868686;
-    font-size: 1em;
-    line-height: 1.4;
-}
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-hr {
-    display: block;
-    height: 1px;
-    border: 0;
-    border-top: 1px solid #ccc;
-    margin: 1em 0;
-    padding: 0;
-}
-audio,
-canvas,
-iframe,
-img,
-svg,
-video {
-    vertical-align: middle;
-}
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-textarea {
-    resize: vertical;
-}
-.browserupgrade {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-.menu {
-    list-style-type: none;
-    padding-top: 40px;
-    margin: 0;
-    font-size: 1.4em;
-}
-.menu li {
-    display: inline;
-    padding-right: 10px;
-}
-
-.menu a:link, .menu a:hover, .menu a:focus, .menu a:visited { 
-    text-decoration: none;
-    color: white;
-} 
-
-.menu a:active, .menu a:hover
+#nav a:active, #nav a:hover
 {
-    color: red;
+   color: black;
 }
-/* ==========================================================================
-   Media Queries
-   ========================================================================== */
-/* ==========================================================================
-   Helper classes
-   ========================================================================== */
-.hidden {
-    display: none !important;
-    visibility: hidden;
+
+#nav ul
+{
+    list-style:none;
+    position:relative;
+    float:left;
+    margin:0;
+    padding:0
 }
-.visuallyhidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
+
+#nav ul a
+{
+    display:block;
+    color:#ccc;
+    text-decoration:none;
+    font-size:1.3em;
+    line-height:17px;
+    padding:0 5px;
+    font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif
+}
+
+#nav ul li
+{
+    position: relative;
+    float: left;
+    margin:0;
+    padding:0;
+}
+
+#nav ul li.menu
+{
+    background: #000
+}
+
+#nav ul li:hover
+{
+    background:#fff
+}
+
+#nav ul ul
+{
+    display: none;
     position: absolute;
-    width: 1px;
+    top:100%;
+    font-size: 1.0em;
+    left: 0;
+    background:#fff;
+    padding:0
 }
-.visuallyhidden.focusable:active,
-.visuallyhidden.focusable:focus {
-    clip: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    position: static;
-    width: auto;
+#nav ul ul:hover
+{
+    background:#f00
 }
-.invisible {
-    visibility: hidden;
+
+
+#nav ul li ul li
+{
+    float:none;
+    width:120px;
 }
-.clearfix:before,
-.clearfix:after {
-    content: " ";
-    display: table;
+#nav ul ul 
+{
+    line-height:120%;
+    padding:10px 15px
 }
-.clearfix:after {
-    clear: both;
+
+#nav ul ul ul
+{
+    z-index: 5;
+    top:0;
+    margin-left: 110px;
+    background: red;
+    color: red
 }
-.clearfix {
-    *zoom: 1;
+
+#nav ul ul ul li:hover
+{
+    background:#fff
 }
-/* ==========================================================================
-   Print styles
-   ========================================================================== */
-@media print {
-    *,
-    *:before,
-    *:after {
-        background: transparent !important;
-        color: #000 !important;
-        box-shadow: none !important;
-        text-shadow: none !important;
-    }
-    a,
-    a:visited {
-        text-decoration: underline;
-    }
-    a[href]:after {
-        content: " (" attr(href) ")";
-    }
-    abbr[title]:after {
-        content: " (" attr(title) ")";
-    }
-    a[href^="#"]:after,
-    a[href^="javascript:"]:after {
-        content: "";
-    }
-    pre,
-    blockquote {
-        border: 1px solid #999;
-        page-break-inside: avoid;
-    }
-    thead {
-        display: table-header-group;
-    }
-    tr,
-    img {
-        page-break-inside: avoid;
-    }
-    img {
-        max-width: 100% !important;
-    }
-    p,
-    h2,
-    h3 {
-        orphans: 3;
-        widows: 3;
-    }
-    h2,
-    h3 {
-        page-break-after: avoid;
-    }
+
+#nav ul li:hover > ul
+{
+    display:block;
+    color: black
 }
-/*# sourceMappingURL=style.css.map */
 
 /* ============================================================================
                                   css
 =============================================================================*/
+h1 {
+    padding-left: 30px;
+    font-size: 2em;
+    margin: 0.67em 0;
+    color: #e0e0e0
+}
 
 h2 {
     font-size: 1.2em;
-    color: red;
+    color: red
 }
 
-/*-----------*/
-/*           */
-/*-----------*/
-
 #enteteBarre {
-    line-height: auto;
+    line-height: 10px;
     display: flex;
     flex-flow: row wrap;
-    align-items: center;
+    align-items: center
 }
 
 #logo, #nav, #reseauxSociaux {
-    display: inline-flex;
+    display: inline-flex
+}
+
+.user{
+   width: 12%
+}
+
+.admin{
+    width: 12%
+}
+
+.login{
+    margin-bottom: : 16px;
+    width: 20%;
+    
 }
 
 #logo {
 
     padding: 15px 0 0 20px;
-    width: 380px;
+    width: 380px
 }
 
 #logo img {
-    width: 90%;
+    width: 90%
 }
 
-#nav {
-    width: 65%;
-}
-
-nav a:link, nav a:hover, nav a:focus, nav a:visited { 
-    text-decoration:none;
-    color: white;
-    font-size: 1.2em;
-} 
-
-nav a:active, nav a:hover
-{
-    color: red;
-}
 
 #reseauxSociaux img{
     width: 38px;
-    padding: 10px ;
+    padding: 10px 
 }
 
 #reseauxSociaux {
     margin-top: 6px;
-    text-align: justify;
+    text-align: justify
 }
 
 div.bordure {
     vertical-align: top;	
-    border: 2px solid red;
+    border: 2px solid red
 }
 
 div.bordureB {
     vertical-align: top;	
-    border: 1px solid #868686;
+    border: 1px solid #868686
 }
 #utilisation, #mediaskates, #information {
     display: inline-block;
     vertical-align: top;
     font-size: 13px;
-    padding-bottom: 20px;
+    padding-bottom: 20px
 }
 
 #utilisation {
     padding-left: 115px;
-    width: 400px;
+    width: 400px
 }
 
 #mediaskates {
-    width: 250px;
+    width: 250px
 }
 
 #information {
-    width: 250px;
+    width: 250px
 }
 
 #slide {
-    display: block;
+    display: block
 }
 
 #baniereFooter {
-    display: flex;
+    display: flex
 }
-
 
 #liens {
     margin-top: 15px;
     display: inline-flex;
     justify-content: space-around;
-    width: 100%;
+    width: 100%
 }
 
 footer a:link, footer a:hover, footer a:focus, footer a:visited { 
     text-decoration:none;
     color: gray;
-    font-size: 0.8em;
+    font-size: 0.8em
 } 
 
 footer a:active, footer a:hover
 {
-    color: white;
+    color: white
 }
-
-
 /*-----------*/
 /*   Cache   */
 /*-----------*/
@@ -463,6 +266,11 @@ footer a:active, footer a:hover
     color: white;
 } 
 
+#date-lieux{
+    padding-right: 40px;
+    text-align: center;
+    color: #ff0000;
+}    
 /*-----------*/
 /* SlideShow */
 /*-----------*/
