supression view et controller public photo index view et controller public event show avec pagination photo

--- a/laravel/public/css/jeremTemp.css
+++ b/laravel/public/css/jeremTemp.css
@@ -53,6 +53,15 @@
     padding: 5px;
 }
 
+/*view event show*/
+#photoevent{
+    text-align: center;
+}
+#infoevent{
+    font-size: 15px;
+    padding: 10px;
+}
+
 
 /* Pagination styling */
 .pagination {
